--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 numpy==1.19.2
-pandas==1.1.3
+pandas>=1.1.3
 plotly==5.5.0
 python-dateutil==2.8.2
 pytz==2021.3
