--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
-numpy==1.19.2
-pandas>=1.1.3
+numpy==1.17.3
+pandas==1.1.3
 plotly==5.5.0
 python-dateutil==2.8.2
 pytz==2021.3
